<resources>
    <string name="app_name">Seller</string>
    <string name="seller">Seller</string>
    <string name="orders">Orders</string>
    <string name="revenue">Revenue</string>
    <string name="products">Products</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="chat">Chat</string>
    <string name="search">search</string>
    <string name="home">Home</string>
    <string name="me">Me</string>
    <string name="account">Account</string>
    <string name="close">close</string>
    <string name="categories">Categories</string>
    <string name="search_here">Search here…</string>
    <string name="_10">10</string>
    <string name="total_title">Total (%1$s): $%2$s</string>
    <string name="orders_title">Orders: %1$s</string>
    <string name="account_setting">Account Setting</string>
    <string name="feedback">Feedback</string>
    <string name="display_name">Display Name</string>
    <string name="log_out">Log out</string>
    <string name="quantity">Quantity: </string>
    <string name="_1">1</string>
    <string name="total">Total:</string>
    <string name="all">All</string>
    <string name="_0">0</string>
    <string name="address">Address:</string>
    <string name="order">Order</string>
    <string name="details">Details:</string>
    <string name="total_cost_s_products">Total cost\'s products:</string>
    <string name="shipping_cost">Shipping cost:</string>
    <string name="promotion">Promotion:</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_orders">Your Orders</string>
    <string name="thank_you_for_your_purchase">Thank you for your purchase</string>
    <string name="to_your_orders">To your orders</string>
    <string name="wait_for_confirmation">Wait for confirmation</string>
    <string name="confirmed">Confirmed</string>
    <string name="cancelled">Cancelled</string>
    <string name="order_id">Order id:</string>
    <string name="order_details">Order Details</string>
    <string name="cancel_order">Cancel order</string>
    <string name="orderTitle">You have %1$s order(s) placed</string>
    <string name="order_s_pending_confirmation">Order(s) pending confirmation:</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="product_s_id">Product\'s id:</string>
    <string name="there_are_no_orders_pending_confirmation">There are no orders pending confirmation</string>
    <string name="manage">Manage</string>
    <string name="success">Success</string>
    <string name="manage_orders">Manage orders</string>
    <string name="monthly_revenue">Monthly revenue</string>
    <string name="total_revenue">Total revenue</string>
    <string name="monthly">Monthly</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="productId">Product\'s Id: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chart">Chart</string>
    <string name="product_management">Product Management</string>
</resources>
