<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.fragment.ManageFragment">

    <!--    header-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_user_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/monthly_revenue"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar" />

        <ImageView
            android:id="@+id/bell"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="40dp"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/bell"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/badge"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/badge_circle"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/bell"
            app:layout_constraintTop_toTopOf="@+id/bell" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    body-->

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.cardview.widget.CardView
            android:id="@+id/product"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="12dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:src="@drawable/edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/lato"
                android:text="@string/products"
                android:textColor="@color/g_gray700"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/message"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="12dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_gravity="end"
                android:background="@drawable/badge_circle"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/_10"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="visible" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:src="@drawable/chat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/lato"
                android:text="Message"
                android:textColor="@color/g_gray700"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.cardview.widget.CardView
            android:id="@+id/account"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="12dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:src="@drawable/user_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/lato"
                android:text="@string/account"
                android:textColor="@color/g_gray700"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/logout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="12dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:src="@drawable/logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/lato"
                android:text="@string/log_out"
                android:textColor="@color/g_gray700"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_seller_logo_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10" />

</androidx.constraintlayout.widget.ConstraintLayout>